# MLIR-Forth

./: .gitignore  README.md
part1/: README.md  test.forth
part2/: CMakeLists.txt  README.md
part2/src/: CMakeLists.txt  main.cpp
part2/src/forth/: Main.cpp  Main.hpp
part2/src/forth/lang/: Lexer.l  Node.hpp  Parser.yy
part3/: README.md  test.forth
part3/src/forth/: Main.cpp  Main.hpp
part3/src/forth/ir1/: CMakeLists.txt  ForthDialect.cpp  ForthDialect.hpp  Generator.cpp  Ops.cpp  Ops.hpp
part3/src/forth/ir1/ops/: AddOp.td  CallOp.td  ConstantOp.td  DivOp.td  ExecuteOp.td  ForthOp.td  LoadOp.td  MulOp.td  PickOp.td  StackOp.td  SubOp.td  WriteStringOp.td
part3/src/forth/lang/: Node.hpp  Test.cpp
part4/: CMakeLists.txt
part4/src/: CMakeLists.txt  main.cpp
part4/src/forth/: Main.cpp  Main.hpp
part4/src/forth/ir1/: CMakeLists.txt  ForthDialect.td  Generator.hpp  Ops.td  Passes.cpp  Passes.hpp  Passes.td  Rewriter.td
part4/src/forth/ir1/ops/: FuncOp.td  GetOp.td  PopOp.td  PushOp.td  ReadCharOp.td  ReturnOp.td  StoreOp.td  WriteCharOp.td  WriteIntegerOp.td
part4/src/forth/lang/: Lexer.hpp  Test.hpp
